versioned_docs/version-2025.2.5/turma/elm/elm2025.mdx
---
slug: /turma/elm2025
---
import { Grid } from "@site/src/components/Grid";
import BrowserOnly from "@docusaurus/BrowserOnly";

export const data = {
  "title": "ELM2025",
  "base": "ELM",
  "weekClasses": [
    {
      "dayName": "Segunda-Feira",
      "dayClasses": [
        {
          "subject": "Resistência dos Materiais - 109",
          "size": 4,
          "teachers": [
            "Darlan Roque Dapieve"
          ],
          "classroom": "sala_14-2",
          "students": [
            "ELM2025"
          ],
          "time": "19:00 - 19:50",
          "color": ""
        },
        {
          "subject": "Tecnologia dos Materiais - 343",
          "size": 2,
          "teachers": [
            "Sérgio Takahashi"
          ],
          "classroom": "sala_14-2",
          "students": [
            "ELM2025"
          ],
          "time": "19:00 - 19:50",
          "color": ""
        },
        {
          "subject": "Processos de Fabricação II - 344",
          "size": 2,
          "teachers": [
            "Fábio Fernandes da Silva"
          ],
          "classroom": "laboratorio_de_computacao_aplicada",
          "students": [
            "ELM2025"
          ],
          "time": "21:00 - 21:50",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Terça-Feira",
      "dayClasses": [
        {
          "subject": "Máquinas Elétricas e Acionamentos - 110",
          "size": 2,
          "teachers": [
            "Wylliam Salviano Gongora"
          ],
          "classroom": "laboratorio_de_maquinas_e_acionamentos_eletricos_b4",
          "students": [
            "ELM2025"
          ],
          "time": "19:00 - 19:50",
          "color": ""
        },
        {
          "subject": "Metrologia - 108",
          "size": 2,
          "teachers": [
            "Sérgio Takahashi"
          ],
          "classroom": "laboratorio_de_metrologia_b4",
          "students": [
            "ELM2025"
          ],
          "time": "21:00 - 21:50",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Quarta-Feira",
      "dayClasses": [
        {
          "subject": "Máquinas Térmicas de Fluxo - 111",
          "size": 4,
          "teachers": [
            "Luiz Inácio Chaves"
          ],
          "classroom": "sala_14-2",
          "students": [
            "ELM2025"
          ],
          "time": "19:00 - 19:50",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Quinta-Feira",
      "dayClasses": [
        {
          "subject": "Eletrônica de Potência - 114",
          "size": 4,
          "teachers": [
            "Juliano da Rocha Queiroz"
          ],
          "classroom": "sala_14-2",
          "students": [
            "ELM2025"
          ],
          "time": "19:00 - 19:50",
          "color": ""
        },
        {
          "subject": "Desenho Assistido por computador - 340",
          "size": 2,
          "teachers": [
            "Sérgio Takahashi"
          ],
          "classroom": "laboratorio_de_computacao_aplicada",
          "students": [
            "ELM2025"
          ],
          "time": "19:00 - 19:50",
          "color": ""
        },
        {
          "subject": "Tecnologia dos Materiais - 343",
          "size": 2,
          "teachers": [
            "Sérgio Takahashi"
          ],
          "classroom": "sala_14-2",
          "students": [
            "ELM2025"
          ],
          "time": "21:00 - 21:50",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Sexta-Feira",
      "dayClasses": [
        {
          "subject": "Elementos de Automação - 112",
          "size": 2,
          "teachers": [
            "Jair Fajardo Junior"
          ],
          "classroom": "sala_14-2",
          "students": [
            "ELM2025"
          ],
          "time": "19:00 - 19:50",
          "color": ""
        },
        {
          "subject": "Gestão de Produção - 117",
          "size": 2,
          "teachers": [
            "Lechan Colares Santos"
          ],
          "classroom": "sala_14-2",
          "students": [
            "ELM2025"
          ],
          "time": "21:00 - 21:50",
          "color": ""
        }
      ]
    }
  ],
  "time": [
    {
      "time": "07:30 - 08:20",
      "size": 50
    },
    {
      "time": "08:20 - 09:10",
      "size": 50
    },
    {
      "time": "09:25 - 10:15",
      "size": 50
    },
    {
      "time": "10:15 - 11:05",
      "size": 50
    },
    {
      "time": "11:05 - 11:55",
      "size": 50
    },
    {
      "time": "13:10 - 14:00",
      "size": 50
    },
    {
      "time": "14:00 - 14:50",
      "size": 50
    },
    {
      "time": "15:05 - 15:55",
      "size": 50
    },
    {
      "time": "15:55 - 16:45",
      "size": 50
    },
    {
      "time": "16:45 - 17:35",
      "size": 50
    },
    {
      "time": "19:00 - 19:50",
      "size": 50
    },
    {
      "time": "19:50 - 20:40",
      "size": 50
    },
    {
      "time": "21:00 - 21:50",
      "size": 50
    },
    {
      "time": "21:50 - 22:40",
      "size": 50
    }
  ]
}

# ELM2025

<div>
  {
    <BrowserOnly>
      {() => (
        <Grid
          title={data.title}
          weekClasses={data.weekClasses}
          time={data.time}
        />
      )}
    </BrowserOnly>
  }
</div>
